--- a/StayInTouch/Views/Base.lproj/Main.storyboard
+++ b/StayInTouch/Views/Base.lproj/Main.storyboard
@@ -18,52 +18,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eiU-fD-Tjf">
-                                <rect key="frame" x="20" y="44" width="382" height="228"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="228" id="XTt-Ko-zIh"/>
-                                </constraints>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellReuseIdentifier" id="bT0-gb-Ww4">
-                                        <rect key="frame" x="0.0" y="28" width="382" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bT0-gb-Ww4" id="es7-8G-kPJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="382" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Ng-eL-cDF">
+                                <rect key="frame" x="176.5" y="527" width="61" height="30"/>
+                                <state key="normal" title="Let's Go!"/>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ufT-v4-Qvt"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="DDZ-ce-9hP"/>
+                                    <action selector="letsGoButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3zQ-jM-E5M"/>
                                 </connections>
-                            </tableView>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Who will you contact today?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wD6-cz-MMw">
                                 <rect key="frame" x="99.5" y="482" width="215" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Ng-eL-cDF">
-                                <rect key="frame" x="176.5" y="527" width="61" height="30"/>
-                                <state key="normal" title="Let's Go!"/>
-                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b1x-at-bX6">
+                                <rect key="frame" x="163.5" y="208" width="87" height="41"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="3Ng-eL-cDF" firstAttribute="top" secondItem="wD6-cz-MMw" secondAttribute="bottom" constant="24" id="51g-7Z-PIX"/>
                             <constraint firstItem="wD6-cz-MMw" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="MTF-Dd-YjS"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eiU-fD-Tjf" secondAttribute="trailing" constant="12" id="Q84-qy-nBW"/>
-                            <constraint firstItem="eiU-fD-Tjf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="SZU-RD-fpB"/>
-                            <constraint firstItem="wD6-cz-MMw" firstAttribute="top" secondItem="eiU-fD-Tjf" secondAttribute="bottom" constant="210" id="nUk-tb-qWz"/>
-                            <constraint firstItem="eiU-fD-Tjf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pgI-jI-qTw"/>
+                            <constraint firstItem="b1x-at-bX6" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="d6n-0r-RS1"/>
+                            <constraint firstItem="b1x-at-bX6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="164" id="hrt-3x-FUI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wD6-cz-MMw" secondAttribute="bottom" constant="359" id="rxx-e6-Z3I"/>
                             <constraint firstItem="3Ng-eL-cDF" firstAttribute="centerX" secondItem="wD6-cz-MMw" secondAttribute="centerX" id="w2i-1j-Rfh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="tableView" destination="eiU-fD-Tjf" id="wec-fY-Ert"/>
+                        <outlet property="letsGoButton" destination="3Ng-eL-cDF" id="bpB-1f-aft"/>
+                        <outlet property="nameLabel" destination="b1x-at-bX6" id="ZCq-B4-mru"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
